@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Fixed: When card stacks have different sizes, the parent toolbox containers don't line up
 Build a Fraction: Show divisions when going into the collection box
 Build a Fraction: Removed unused code for making target containers flash when matched
 Build a Fraction: Shapes: Use green images for left/right buttons that change number of divisions in container
